2006-07-11  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/gnu_java_net_local_LocalSocketImpl.c
	(read): Use fd when local sockets are disabled to make the
	compiler quite.
	(write): Likewise.

2006-07-11  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/MultiPixelPackedSampleModel.java
	(MultiPixelPackedSampleModel): Substract -1 so that the integer
	division gets rounded up.

2006-07-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/management/ManageFactory.java:
	(getMemoryManagerMXBeans()): Use addAll, not add.
	
2006-07-11  Vivek Lakshmanan  <vivekl@redhat.com>

	PR 27649:
	* gnu/classpath/ByteArray.java: Removed (moved).
	* gnu/java/security/util/ByteArray.java: New File.
	* gnu/javax/crypto/RSACipherImpl.java: Reference 
	gnu.java.security.util.ByteArray instead of gnu.classpath.ByteArray.

2006-07-11  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/gnu_java_net_local_LocalSocketImpl.c
	(available): Pass fd as argument and avoid JNI class/field
	lookup.
	(read): Likewise.
	(write): Likewise.
	* include/gnu_java_net_local_LocalSocketImpl.h:
	Regenerated.
	* gnu/java/net/local/LocalSocketImpl.h
	(available): Pass fd as argument and avoid JNI class/field
	lookup.
	(read): Likewise.
	(write): Likewise.	

2006-07-11  Sven de Marothy  <sven@physto.se>

	* gnu/javax/sound/sampled/AU/AUReader.java:
	Correct file extension from .as to .au.

2006-07-11  Sven de Marothy  <sven@physto.se>

	* gnu/javax/sound/sampled/AU/AUReader.java:
	New file.
	* resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader: 
	Added new provider.

2006-07-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JTable.java
	(setRowSelectionAllowed): Fire required PropertyChangeEvent,
	(setColumnSelectionAllowed): Likewise.

2006-07-10  Vivek Lakshmanan  <vivekl@redhat.com>

	PR 27649:
	* gnu/classpath/debug/Simple1LineFormatter.java: Use
	AccessController.doPrivileged instead of SystemProperties.getProperty.